--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,10 @@
 
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
 
     <dependencies>
         <dependency>
